--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d src"
   },
   "dependencies": {
+    "gh-pages": "^6.2.0",
     "vue": "^3.5.12"
   },
   "devDependencies": {
