--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "gh-pages": "^6.2.0",
-    "vue": "^3.5.12"
+    "vue": "^3.5.12",
+    "vue-i18n": "^10.0.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
